feat: change ui

--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
-<!-- ================= index.html ================= -->
 <!doctype html>
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dịch vụ Taxi Điện VF5 - Giá Rẻ, An Toàn</title>
+    <title>Dịch vụ Taxi - Giá Rẻ, An Toàn</title>
     <meta
       name="description"
       content="Dịch vụ taxi điện VF5 giá rẻ, an toàn, thân thiện môi trường."
     />
 
-    <!-- Google Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
 
-    <!-- Main CSS -->
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <!-- Header -->
-    <header>
+    <header class="header">
+      <div class="header-content container">
+        <div class="header-content-left">
+          <img src="./assets/images/taxilogo.png" alt="" />
+        </div>
+        <div class="header-content-right"></div>
+      </div>
+    </header>
+    <!-- <header>
       <div class="header-content">
         <h1>Dịch Vụ Taxi Điện VF5</h1>
         <p>
@@ -37,7 +41,6 @@
       />
     </header>
 
-    <!-- Features -->
     <section>
       <div class="section-title">
         <h2>Tại Sao Chọn Chúng Tôi?</h2>
@@ -67,7 +70,6 @@
       </div>
     </section>
 
-    <!-- Gallery -->
     <section>
       <div class="section-title">
         <h2>Hình Ảnh Thực Tế</h2>
@@ -94,7 +96,6 @@
       </div>
     </section>
 
-    <!-- Pricing -->
     <section>
       <div class="pricing">
         <h2>Bảng Giá</h2>
@@ -103,7 +104,6 @@
       </div>
     </section>
 
-    <!-- Booking -->
     <section id="booking">
       <div class="section-title">
         <h2>Đặt Xe</h2>
@@ -137,13 +137,11 @@
       </form>
     </section>
 
-    <!-- Footer -->
     <footer>
       <p>© 2026 Taxi Điện VF5 - Bắc Ninh</p>
       <a href="tel:0981913778">Hotline: 0981 913 778</a>
     </footer>
 
-    <!-- Mobile Call -->
     <div class="mobile-call">
       <a href="tel:0981913778">📞 Gọi Ngay</a>
     </div>
@@ -155,9 +153,8 @@
       <a href="https://m.me/yourpage" target="_blank" class="chat-messenger"
         >Messenger</a
       >
-    </div>
+    </div> -->
 
-    <!-- Main JS -->
     <script src="main.js"></script>
   </body>
 </html>
